--- a/src/main/resources/fxml/Dashboard.fxml
+++ b/src/main/resources/fxml/Dashboard.fxml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.habit_tracker.controllers.DashboardController" spacing="10" alignment="CENTER">
-    <Label text="Dashboard" style="-fx-font-size: 24px;"/>
-    <VBox spacing="5">
-        <Label text="Habits for Today" style="-fx-font-size: 18px;"/>
-        <ListView fx:id="todayHabitsListView" />
-    </VBox>
-    <VBox spacing="5">
-        <Label text="Quick Stats" style="-fx-font-size: 18px;"/>
-        <Label fx:id="completedHabitsLabel" text="Habits Completed: 0"/>
-        <Label fx:id="completionPercentageLabel" text="Completion Percentage: 0%"/>
-    </VBox>
-</VBox>
+<?import javafx.scene.layout.VBox?>
+<BorderPane fx:controller="com.java.habit_tracker.controllers.DashboardController"
+            xmlns:fx="http://javafx.com/fxml" >
+    <top>
+        <VBox spacing="10" alignment="CENTER">
+                <HBox.margin>
+                    <Insets top="10" right="10" bottom="10" left="10"/>
+                </HBox.margin>
+                <HBox alignment="CENTER" spacing="10">
+                    <Label text="Total Habits Completed:"/>
+                    <Label fx:id="totalHabitsCompleted" text="0"/>
+                </HBox>
+                <HBox alignment="CENTER" spacing="10">
+                    <Label text="Overall Completion Rate:"/>
+                    <Label fx:id="overallCompletionRate" text="0%"/>
+                </HBox>
+                <TextField fx:id="searchField" promptText="Search habits"/>
+        </VBox>
+    </top>
+    <bottom>
+        <HBox alignment="CENTER">
+            <ListView fx:id="habitListView" VBox.vgrow="ALWAYS" prefWidth="300" prefHeight="200"/>
+        </HBox>
+    </bottom>
+</BorderPane>
