--- a/src/main/resources/fxml/Habit.fxml
+++ b/src/main/resources/fxml/Habit.fxml
@@ -5,12 +5,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.geometry.Pos?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.habit_tracker.controllers.HabitController" spacing="10" alignment="CENTER">
+<VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.java.habit_tracker.controllers.HabitController" spacing="20" alignment="CENTER">
     <Label text="Manage Habits" style="-fx-font-size: 24px;"/>
-    <GridPane hgap="10" vgap="10">
+    <GridPane hgap="10" vgap="10" alignment="CENTER">
         <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
         <TextField fx:id="nameTextField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
@@ -22,8 +24,10 @@
 
         <Label text="Active:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
         <CheckBox fx:id="activeCheckBox" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-
-        <Button text="Add Habit" onAction="#addHabit" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
     </GridPane>
-    <ListView fx:id="habitListView" VBox.vgrow="ALWAYS"/>
+    <HBox spacing="10" alignment="CENTER">
+        <Button text="Add Habit" onAction="#addHabit"/>
+        <Button text="Delete Habit" onAction="#deleteHabit" fx:id="deleteButton" disable="true"/>
+    </HBox>
+    <ListView fx:id="habitListView" VBox.vgrow="ALWAYS" prefWidth="300" prefHeight="200"/>
 </VBox>
